<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/callrecordbackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_days_for_your_call_sms_stats"
        android:id="@+id/textviewstat"
        android:singleLine="true"
        android:layout_margin="15dp"
        android:textColor="#6658fc"
        android:textStyle="bold"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back"
        android:onClick="clickback"
        android:singleLine="true"
        android:textStyle="bold"
        android:backgroundTint="#6658fc"
        android:textSize="25sp"
        android:textColor="#0224fe"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="54dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newtext"
        android:id="@+id/textViewstatdetail"
        android:layout_below="@+id/buttonStat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:text="@string/_30"
        android:layout_below="@+id/textviewstat"
        android:layout_alignLeft="@+id/textviewstat"
        android:layout_alignStart="@+id/textviewstat"
        android:layout_marginTop="23dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_stats"
        android:id="@+id/buttonStat"
        android:layout_below="@+id/editText"
        android:onClick="clickgetstats"
        android:singleLine="true"
        android:textStyle="bold"
        android:backgroundTint="#6658fc"
        android:textSize="25sp"
        android:textColor="#0224fe"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
