<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/callrecordbackground"
              android:paddingTop="50dp"
              android:paddingLeft="20dp"
              android:paddingRight="20dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playbackbutton"
        android:id="@+id/playback"
        android:onClick="clickplayback"
        android:textStyle="bold"
        android:backgroundTint="#6658fc"
        android:textColor="#0224fe"
        android:textSize="25sp"
        android:layout_alignBaseline="@+id/save"
        android:layout_alignBottom="@+id/save"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deletebutton"
        android:id="@+id/delete"
        android:onClick="clickdelete"
        android:textStyle="bold"
        android:backgroundTint="#6658fc"
        android:textSize="25sp"
        android:textColor="#0224fe"
        android:layout_above="@+id/save"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savebutton"
        android:id="@+id/save"
        android:onClick="clicksave"
        android:textStyle="bold"
        android:backgroundTint="#6658fc"
        android:textSize="25sp"
        android:textColor="#0224fe"
        android:layout_above="@+id/load"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_calls"
        android:id="@+id/load"
        android:singleLine="true"
        android:textStyle="bold"
        android:backgroundTint="#6658fc"
        android:textSize="25sp"
        android:textColor="#0224fe"
        android:layout_above="@+id/stat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="clickload" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_stats"
        android:id="@+id/stat"
        android:singleLine="true"
        android:textStyle="bold"
        android:backgroundTint="#6658fc"
        android:textSize="25sp"
        android:textColor="#0224fe"
        android:layout_above="@+id/back"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="clickstat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exitbutton"
        android:id="@+id/back"
        android:onClick="clickexit"
        android:singleLine="true"
        android:textStyle="bold"
        android:backgroundTint="#6658fc"
        android:textSize="25sp"
        android:textColor="#0224fe"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="54dp" />


</LinearLayout>
